--- a/app/src/main/res/layout/dialog_agreement.xml
+++ b/app/src/main/res/layout/dialog_agreement.xml
@@ -22,16 +22,17 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="25dp"
             android:text="隐私协议"/>
+
         <TextView
             android:id="@+id/tv_content"
-            android:textSize="15sp"
-            android:textColor="#888888"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:lineSpacingExtra="5dp"
             android:paddingBottom="30dp"
-            android:text="若您使用阳光兼职服务，即表示您认同我们在本政策中所述内容。除另有约定外，本政策所用术语与《阳光兼职服务协议》中的术语具有相同的涵义。保护用户的隐私是阳光兼职的一项基本原则。阳光兼职一贯积极地采取技术与管理等方面的合理措施保障用户信息的安全、保密。阳光兼职对用户信息收集、使用及保护等将遵循等协议规定。除法律另有规定外，如您已同意或授权阳光兼职依据前述协议或规定收集、使用或处理涉及您的个人信息的。"/>
+            android:text="若您使用暖阳兼职服务，即表示您认同我们在本政策中所述内容。除另有约定外，本政策所用术语与《阳光兼职服务协议》中的术语具有相同的涵义。保护用户的隐私是阳光兼职的一项基本原则。阳光兼职一贯积极地采取技术与管理等方面的合理措施保障用户信息的安全、保密。阳光兼职对用户信息收集、使用及保护等将遵循等协议规定。除法律另有规定外，如您已同意或授权阳光兼职依据前述协议或规定收集、使用或处理涉及您的个人信息的。"
+            android:textColor="#888888"
+            android:textSize="15sp" />
     </LinearLayout>
     <LinearLayout
         android:paddingLeft="25dp"
