--- a/app/src/main/res/layout/dialog_copy_contact.xml
+++ b/app/src/main/res/layout/dialog_copy_contact.xml
@@ -32,6 +32,7 @@
             android:layout_marginBottom="28dp"
             />
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv_copy"
             android:layout_width="match_parent"
             android:layout_height="45dp"
